--- a/ANT+_Android_SDK/Sample/ANT+ Plugin Sampler/source/res/layout/layout_multidevice_searchresult.xml
+++ b/ANT+_Android_SDK/Sample/ANT+ Plugin Sampler/source/res/layout/layout_multidevice_searchresult.xml
@@ -19,6 +19,7 @@ All rights reserved.
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
         android:gravity="right"
+        android:text="textView_multiDeviceType"
         android:textAppearance="@android:style/TextAppearance.Medium" />
 
     <TextView
